--- a/GreatestMovies/Views/Shared/_Layout.cshtml
+++ b/GreatestMovies/Views/Shared/_Layout.cshtml
@@ -1,4 +1,7 @@
 ﻿<!DOCTYPE html>
+
+<link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
+
 <html>
 <head>
     <meta charset="utf-8" />
@@ -16,13 +19,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Greatest Movies", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Movies", "Index", "Movies")</li>
+                    <li>@Html.ActionLink("Actors", "Index", "Actors")</li>
+                    <li>@Html.ActionLink("Genres", "Index", "Genres")</li>
                 </ul>
             </div>
         </div>
