--- a/GreatestMovies/Views/Actors/Index.cshtml
+++ b/GreatestMovies/Views/Actors/Index.cshtml
@@ -4,48 +4,35 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2 class="page-title">Actors</h2>
 
-<p>
+<p class="create-new btn btn-primary">
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.ActorName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DOB)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Nationality)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Gender)
-        </th>
-        <th></th>
-    </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.ActorName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DOB)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Nationality)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Gender)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ActorID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ActorID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ActorID })
-        </td>
-    </tr>
-}
+    <div class="row">
+        @foreach (var item in Model)
+        {
+            <div class="col-md-4 colBorder">
+                <h1 class="actor-name">
+                    @Html.DisplayFor(modelItem => item.ActorName)
+                </h1>
+                <h4>
+                    This actor was born on: @Html.DisplayFor(modelItem => item.DOB)
+                </h4>
+                <h4>
+                    Actor's nationality is: @Html.DisplayFor(modelItem => item.Nationality)
+                </h4>
+                <h6>
+                    Gender: @Html.DisplayFor(modelItem => item.Gender)
+                </h6>
+                <p>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.ActorID }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.ActorID }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.ActorID })
+                </p>
+            </div>
+        }
+        </div>
 
-</table>
+
